--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -26,6 +26,8 @@ $time\
 [ ](fg:purple)\
 $line_break$character"""
 
+command_timeout = 300000
+
 palette = 'catppuccin_mocha'
 
 [palettes.gruvbox_dark]
@@ -111,6 +113,7 @@ truncation_symbol = "…/"
 "Music" = "󰝚 "
 "Pictures" = " "
 "Developer" = "󰲋 "
+"dev" = "󰲋 "
 
 [git_branch]
 symbol = ""
@@ -120,6 +123,7 @@ format = '[[ $symbol $branch ](fg:base bg:green)]($style)'
 [git_status]
 style = "bg:teal"
 format = '[[($all_status$ahead_behind )](fg:base bg:green)]($style)'
+
 
 [nodejs]
 symbol = ""
